# Exam-Catalyst

./: README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/modules/: extraction.py
frontend/: app.js  index.html
