[project]
name = "exam-catalyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "python-multipart>=0.0.32",
    "PyMuPDF>=1.27.2",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    "pdf2image>=1.16.0",
    "Pillow>=9.5.0",
]
